k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: digitrans-cm
  labels:
    name: digitrans-cm
    project: DIGITRANS-CM
    client: AGROCAM-SA
